- fixed logo size on mobile devices

--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -194,6 +194,46 @@ img.header-image {
 	width: 40px;
 	height: 40px;
 	margin-right: 10px;
+
+	@media (max-width: 576px) {
+		width: 30px;
+		height: 30px;
+		margin-top: -5px;
+		margin-right: 5px;
+	}
+}
+
+.header-title-logo {
+	height: 38px;
+
+	@media (max-width: 576px) {
+		height: 28px;
+	}
+}
+
+.navbar-brand {
+	@media (max-width: 576px) {
+		margin-right: 0.25rem;
+	}
+}
+
+.navbar-toggler {
+	@media (max-width: 576px) {
+		padding: 0.25rem 0.5rem;
+	}
+}
+
+.navbar-brand span.fw-light {
+	@media (max-width: 576px) {
+		font-size: 1.2rem;
+	}
+}
+
+.navbar > .container {
+	@media (max-width: 576px) {
+		padding-left: 0.75rem;
+		padding-right: 0.75rem;
+	}
 }
 
 //$font-family-monospace: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;
